PHP: Added drive and login; HTML: added bulba sass and fixed layout issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
     volumes:
       - ./public:/var/www/html
       - ./:/var/www/
+      - ./data:/data
     ports:
       - 8080:80
-volumes:
-  pg:
