--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./public:/var/www/html
       - ./:/var/www/
       - ./data:/data
+    user: 1000:1000
     ports:
       - 8080:80
   pgadmin:
