--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ./public:/var/www/html
       - ./:/var/www/
-      - ./data:/data
+      - ./data:/var/www/data
     user: 1000:1000
     ports:
       - 8080:80
